tests/invalid/namespace-inconsistent-content.nyx
namespace broken::module:
    fn first() -> ok:
        pass
   fn second() -> ok:
        pass
    const VALUE = 10
